--- a/DataVisualization/views/index.ejs
+++ b/DataVisualization/views/index.ejs
@@ -33,7 +33,7 @@
      				 </span>
                 </div>
 
-                <button id="btnREST" class="btn btn-default" data-toggle="drawer" href="#drawerStruct" type="button">GET!</button>
+                <button id="btnREST" class="btn btn-default" data-toggle="drawer" href="#drawerStruct" type="button">Register</button>
             </div>
 
             <div class="form-group" style="margin-top: 30px">
@@ -105,10 +105,35 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h3 class="modal-title">Setting Header</h3>
+                <h3 class="modal-title">Setting MetaData</h3>
             </div>
             <div class="modal-body">
+
+                <div align="center">Data Title</div>
+
+                <input id="inputTitle" type="text" placeholder='String' class="form-control"
+                       onClick="this.setSelectionRange(0, this.value.length)"/>
+
                 <table class="table table-striped" id="tblGrid">
+                    <thead id="tblHead">
+                    <tr>
+                        <th>Interval</th>
+                        <th>Exist TimeColumn</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+
+                    <td>
+                        <input id="inputInterval" type="text" placeholder='Number' class="form-control"
+                               onClick="this.setSelectionRange(0, this.value.length)"/>
+                    </td>
+                    <td>
+                        <div align="center">
+                        <input id="inputTimeCheck" type="checkbox" style="width:30px; height:30px;"/>
+                        </div>
+                    </td>
+                    </tbody>
+
                     <thead id="tblHead">
                     <tr>
                         <th>key</th>
@@ -175,7 +200,6 @@
 </body>
 
 <script src="javascripts/index.js" type="text/javascript"></script>
-<script src="javascripts/struct.js" type="text/javascript"></script>
 
 </html>
 
