--- a/DataVisualization/public/layout/easyLayout1.html
+++ b/DataVisualization/public/layout/easyLayout1.html
@@ -1,77 +1,38 @@
 <div class="row" style="height: 100%">
-    <div class="col-lg-12" style="height: 30%">
+    <div class="col-lg-12" style="height: 40%">
         <div class="panel panel-default" style="height: 100%">
-            <div class="panel-heading">
-                Line Chart Example
-            </div>
             <!-- /.panel-heading -->
-            <div class="panel-body" style="height: 80%">
+            <div class="panel-body" style="height: 100%">
             </div>
             <!-- /.panel-body -->
         </div>
         <!-- /.panel -->
     </div>
     <!-- /.col-lg-12 -->
-    <div class="col-lg-6">
+    <div class="col-lg-6" style="height: 30%;">
         <div class="panel panel-default" style="height: 100%">
-            <div class="panel-heading">
-                Pie Chart Example
-            </div>
             <!-- /.panel-heading -->
-            <div class="panel-body" style="height: 80%">
+            <div class="panel-body" style="height: 100%">
             </div>
             <!-- /.panel-body -->
         </div>
         <!-- /.panel -->
     </div>
     <!-- /.col-lg-6 -->
-    <div class="col-lg-6">
+    <div class="col-lg-6" style="height: 30%">
         <div class="panel panel-default" style="height: 100%">
-            <div class="panel-heading">
-                Multiple Axes Line Chart Example
-            </div>
             <!-- /.panel-heading -->
-            <div class="panel-body" style="height: 80%">
-
+            <div class="panel-body" style="height: 100%">
             </div>
             <!-- /.panel-body -->
         </div>
         <!-- /.panel -->
     </div>
     <!-- /.col-lg-6 -->
-    <div class="col-lg-6">
+    <div class="col-lg-12" style="height: 30%">
         <div class="panel panel-default" style="height: 100%">
-            <div class="panel-heading">
-                Moving Line Chart Example
-            </div>
             <!-- /.panel-heading -->
-            <div class="panel-body" style="height: 80%">
-            </div>
-            <!-- /.panel-body -->
-        </div>
-        <!-- /.panel -->
-    </div>
-    <!-- /.col-lg-6 -->
-    <div class="col-lg-6">
-        <div class="panel panel-default" style="height: 100%">
-            <div class="panel-heading">
-                Bar Chart Example
-            </div>
-            <!-- /.panel-heading -->
-            <div class="panel-body" style="height: 80%">
-            </div>
-            <!-- /.panel-body -->
-        </div>
-        <!-- /.panel -->
-    </div>
-    <!-- /.col-lg-6 -->
-    <div class="col-lg-12">
-        <div class="panel panel-default" style="height: 100%">
-            <div class="panel-heading">
-                Flot Charts Usage
-            </div>
-            <!-- /.panel-heading -->
-            <div class="panel-body" style="height: 80%">
+            <div class="panel-body" style="height: 100%">
             </div>
             <!-- /.panel-body -->
         </div>
