--- a/DataVisualization/views/dashboard.ejs
+++ b/DataVisualization/views/dashboard.ejs
@@ -26,52 +26,15 @@
 <script src="../lib/jsonPath/jsonPath.js" type="text/javascript"></script>
 <script src="../lib/date/date.js"></script>
 
-
+<script src="../javascripts/dashboard.js" type="text/javascript"></script>
 <script src="../javascripts/index.js" type="text/javascript"></script>
 <script src="../javascripts/chartClass/dateChart.js" type="text/javascript"></script>
 <script src="../javascripts/chartClass/dayChart.js" type="text/javascript"></script>
 <script src="../javascripts/chartClass/dataChart.js" type="text/javascript"></script>
 <script src="../javascripts/chartClass/snapEqualChart.js" type="text/javascript"></script>
-
 <script src="../javascripts/chartHelper.js" type="text/javascript"></script>
 <script src="../javascripts/apiHelper.js" type="text/javascript"></script>
 
-
-
-<script>
-
-    jui.ready(["chart.builder", "util.base", "util.time"], function (builder, _, time) {
-
-        var chartIndex = 0;
-
-        $.get(window.location.href+"?type=getChartInfo", function( data ) {
-
-            //builder, time, iDiv, objSet
-
-            for(var i=0; i<data.length; i++)
-            {
-                var iDiv = document.createElement('div');
-                iDiv.id = 'chartSection' + chartIndex++;
-
-                $("#divChart").append(iDiv);
-
-
-                $("#"+iDiv.id).css("left",data[i].left);
-                $("#"+iDiv.id).css("top",data[i].top);
-                $("#"+iDiv.id).width(data[i].width);
-                $("#"+iDiv.id).height(data[i].height);
-
-                setChart(builder, time, iDiv, data[i], false);
-
-                $("#"+iDiv.id).css("position","absolute");
-
-            }
-        });
-
-    });
-
-
-</script>
 </html>
 
 
