--- a/DataVisualization/public/layout/easyLayout1.html
+++ b/DataVisualization/public/layout/easyLayout1.html
@@ -12,7 +12,7 @@
         <!-- /.panel -->
     </div>
     <!-- /.col-lg-12 -->
-    <div class="col-lg-6">
+    <div class="col-lg-6" style="height: 15%">
         <div class="panel panel-default" style="height: 100%">
             <div class="panel-heading">
                 Pie Chart Example
@@ -25,7 +25,7 @@
         <!-- /.panel -->
     </div>
     <!-- /.col-lg-6 -->
-    <div class="col-lg-6">
+    <div class="col-lg-6" style="height: 15%">
         <div class="panel panel-default" style="height: 100%">
             <div class="panel-heading">
                 Multiple Axes Line Chart Example
@@ -39,7 +39,7 @@
         <!-- /.panel -->
     </div>
     <!-- /.col-lg-6 -->
-    <div class="col-lg-6">
+    <div class="col-lg-6" style="height: 15%">
         <div class="panel panel-default" style="height: 100%">
             <div class="panel-heading">
                 Moving Line Chart Example
@@ -52,7 +52,7 @@
         <!-- /.panel -->
     </div>
     <!-- /.col-lg-6 -->
-    <div class="col-lg-6">
+    <div class="col-lg-6" style="height: 15%">
         <div class="panel panel-default" style="height: 100%">
             <div class="panel-heading">
                 Bar Chart Example
@@ -65,7 +65,7 @@
         <!-- /.panel -->
     </div>
     <!-- /.col-lg-6 -->
-    <div class="col-lg-12">
+    <div class="col-lg-12" style="height: 30%">
         <div class="panel panel-default" style="height: 100%">
             <div class="panel-heading">
                 Flot Charts Usage
