--- a/DataVisualization/views/index.ejs
+++ b/DataVisualization/views/index.ejs
@@ -70,7 +70,7 @@
                             <!--192.168.0.203-->
                             <li>
                                 <input id="inputDB" type="text" class="form-control"
-                                       value="192.168.0.205"
+                                       value="192.168.0.202"
                                        onClick="this.setSelectionRange(0, this.value.length)">
                             </li>
                         </ul>
@@ -95,6 +95,12 @@
                     <a id="aSave" data-toggle="modal" href="#null">Save
                         <span style="font-size:16px;"
                               class="pull-right hidden-xs showopacity glyphicon glyphicon-copy"></span></a>
+                </li>
+
+                <li>
+                    <a id="aHelp" data-toggle="modal" href="#modalHelp">Help
+                        <span style="font-size:16px;"
+                              class="pull-right hidden-xs showopacity glyphicon glyphicon-info-sign"></span></a>
                 </li>
             </ul>
         </div>
@@ -361,12 +367,14 @@
                             <td>
                                 <select id="selectChartTime" class="form-control">
                                     <option>5minute</option>
-                                    <option>1hour</option>
                                     <option>24hour</option>
                                 </select>
 
                                 <select id="selectDistinct" class="form-control" style="display:none">
                                 </select>
+
+                                <input id="inputSetMean" class="form-control" style="display:none; width:50%; float: left;" placeholder="minute">
+                                </input>
                             </td>
                             </tbody>
                         </table>
@@ -429,6 +437,31 @@
 </div>
 
 <!--EasyLayout modal-->
+<div class="modal fade" id="modalHelp">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h3 class="modal-title">Help!</h3>
+            </div>
+            <div class="modal-body" style=" width:100%; height:50%; overflow-x: scroll;">
+
+                <p><h3>1. EasyLayout</h3></p> 사용자의 자유로운 배치 뿐만 아니라 EasyLayout을 제공하여 구조화 된 Dashboard 틀을 제공합니다.
+                <p><h3>2. Data Set</h3></p>
+                <p><h4>2.1 URL Set</h4></p>JSON parser를 이용해 수집하고자하는 column을 클릭해주세요. 여러 개의 column 수집을 원할 경우 +버튼을 통해 JSONPath를 추가하세요
+                <p><h4>2.2 DB Set</h4></p>수집하고자 하는 DB의 IP를 입력해주세요.
+                <p><h3>3. Collect</h3></p>URL, DB 종류별 Tab을 통해 데이터 수집이 가능합니다. Chart의 x축이 될 time 값의 key는 time으로 설정해주세요.
+                <p><h3>4. Draw</h3></p> 데이터의 형태에 따라 Chart를 그릴 수 있습니다. Record Row에서 구별이 필요하다면 Data 탭을 이용하세요.
+                <p><h3>5. Save</h3></p> 자유롭게 Dashboard를 구성한 후, Save를 통해 접근가능한 URL을 제공합니다.
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default " data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="modal fade" id="modalEasy">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -462,6 +495,7 @@
         </div>
     </div>
 </div>
+
 </div>
 
 
