--- a/DataVisualization/public/layout/easyLayout1.html
+++ b/DataVisualization/public/layout/easyLayout1.html
@@ -4,22 +4,23 @@
             <div class="panel-body" style="height: 100%">
             </div>
         </div>
+    </div>
     <!-- /.col-lg-6 -->
-    <div class="col-lg-6" style="height: 40%">
+    <div class="col-lg-6" style="height: 30%">
         <div class="panel panel-default" style="height: 100%">
             <div class="panel-body" style="height: 100%">
             </div>
         </div>
     </div>
     <!-- /.col-lg-6 -->
-    <div class="col-lg-6" style="height: 40%">
+    <div class="col-lg-6" style="height: 30%">
         <div class="panel panel-default" style="height: 100%">
             <div class="panel-body" style="height: 100%">
             </div>
         </div>
     </div>
     <!-- /.col-lg-6 -->
-    <div class="col-lg-12" style="height: 30%">
+    <div class="col-lg-12" style="height: 40%">
         <div class="panel panel-default" style="height: 100%">
             <div class="panel-body" style="height: 100%">
             </div>
