--- a/DataVisualization/views/index.ejs
+++ b/DataVisualization/views/index.ejs
@@ -31,9 +31,21 @@
                 </li>
 
                 <li>
+                    <a id="aLoad" data-toggle="modal" href="#modalLoad">Load
+                        <span style="font-size:16px;"
+                              class="pull-right hidden-xs showopacity glyphicon glyphicon-folder-open"></span></a>
+                </li>
+
+                <li>
                     <a id="aHelp" data-toggle="modal" href="#modalHelp">Help
                         <span style="font-size:16px;"
                               class="pull-right hidden-xs showopacity glyphicon glyphicon-info-sign"></span></a>
+                </li>
+
+                <li>
+                    <a href="/">Home
+                        <span style="font-size:16px;"
+                              class="pull-right hidden-xs showopacity glyphicon glyphicon-home"></span></a>
                 </li>
             </ul>
         </div>
@@ -42,7 +54,6 @@
 
 
 <!--chartClass-->
-
 
 <div id="divChart" style="width:100%; height:100%; padding-left : 30px">
 </div>
@@ -187,7 +198,8 @@
     </div>
 </div>
 
-<!--EasyLayout modal-->
+<!--Help modal-->
+
 <div class="modal fade" id="modalHelp">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -212,6 +224,8 @@
         </div>
     </div>
 </div>
+
+<!--EasyLayout modal-->
 
 <div class="modal fade" id="modalEasy">
     <div class="modal-dialog">
@@ -243,6 +257,30 @@
     </div>
 </div>
 
+<!--Load modal-->
+<div class="modal fade" id="modalLoad">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h3 class="modal-title">Load Dashboard</h3>
+            </div>
+            <div class="modal-body">
+                <table class="table table-striped" id="tblGrid">
+                    <thead id="tblHead">
+                    <tr>
+                        <th>DashboardName</th>
+                        <th>Url(hash)</th>
+                    </tr>
+                    </thead>
+                    <tbody id="tbodyDashboardName">
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+
 </div>
 
 
@@ -251,6 +289,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js" type="text/javascript"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.7/js/bootstrap-dialog.min.js"></script>
 
 <script src="lib/jui-core/dist/core.min.js"></script>
 <script src="lib/jui/dist/ui.min.js"></script>
