--- a/DataVisualization/views/indexHeader.html
+++ b/DataVisualization/views/indexHeader.html
@@ -11,11 +11,12 @@
     <link rel="stylesheet" href="lib/jui-grid/dist/grid.min.css"/>
     <link rel="stylesheet" href="lib/jui-grid/dist/grid-jennifer.min.css"/>
 
-
     <!--Bootstrap CSS-->
     <link rel='stylesheet' href='/stylesheets/sidebar.css'/>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.7/css/bootstrap-dialog.min.css">
+
     <link href="lib/bootstrap-colorpicker/dist/css/bootstrap-colorpicker.min.css" rel="stylesheet">
 </head>
 <body>
