[hotfix]modify dbRegister

--- a/DataCollect/views/index.ejs
+++ b/DataCollect/views/index.ejs
@@ -128,7 +128,7 @@
             <div align="center" style="font-weight:bold">Target IP</div>
 
             <input id="inputDB" type="text" placeholder='String' class="form-control"
-                   value = "192.168.0.207"
+                   value = "192.168.0.173"
                    onClick="this.setSelectionRange(0, this.value.length)"/>
 
             </br>
@@ -378,7 +378,7 @@
                             <thead>
                             <td colspan="3">
                                 <input id="inputTable" type="text" placeholder='Table' class="form-control"
-                                       value="sample3_os"
+                                       value="sample3"
                                        onClick="this.setSelectionRange(0, this.value.length)"/>
                             </td>
                             <td id="btnConnectDB" colspan="1" align="center">
