--- a/DataVisualization/views/dashboard.ejs
+++ b/DataVisualization/views/dashboard.ejs
@@ -35,6 +35,11 @@
                               class="pull-right hidden-xs showopacity glyphicon glyphicon-info-sign"></span></a>
                 </li>
 
+                <li>
+                    <a href="/">Home
+                        <span style="font-size:16px;"
+                              class="pull-right hidden-xs showopacity glyphicon glyphicon-home"></span></a>
+                </li>
             </ul>
         </div>
     </div>
