--- a/DataVisualization/views/index.ejs
+++ b/DataVisualization/views/index.ejs
@@ -89,6 +89,16 @@
                         <table class="table table-striped" id="tblGrid">
                             <thead id="tblHead">
                             <tr>
+                                <th colspan="2">chartTitle</th>
+                            </tr>
+                            <tr>
+                                <th colspan="2">
+                                    <input id="inputChartTitle" type="text" placeholder='Title' class="form-control"
+                                           onClick="this.setSelectionRange(0, this.value.length)"/>
+                                </th>
+                            </tr>
+
+                            <tr>
                                 <th>Interval</th>
                                 <th>Brush Type</th>
                             </tr>
@@ -133,7 +143,8 @@
                                 <select id="selectDistinct" class="form-control" style="display:none">
                                 </select>
 
-                                <input id="inputSetMean" class="form-control" style="display:none; width:50%; float: left;" placeholder="minute">
+                                <input id="inputSetMean" class="form-control"
+                                       style="display:none; width:50%; float: left;" placeholder="minute">
                                 </input>
                             </td>
                             </tbody>
@@ -209,13 +220,19 @@
             </div>
             <div class="modal-body" style=" width:100%; height:50%; overflow-x: scroll;">
 
-                <p><h3>1. EasyLayout</h3></p> 사용자의 자유로운 배치 뿐만 아니라 EasyLayout을 제공하여 구조화 된 Dashboard 틀을 제공합니다.
-                <p><h3>2. Data Set</h3></p>
-                <p><h4>2.1 URL Set</h4></p>JSON parser를 이용해 수집하고자하는 column을 클릭해주세요. 여러 개의 column 수집을 원할 경우 +버튼을 통해 JSONPath를 추가하세요
+                <p>
+                <h3>1. EasyLayout</h3></p> 사용자의 자유로운 배치 뿐만 아니라 EasyLayout을 제공하여 구조화 된 Dashboard 틀을 제공합니다.
+                <p>
+                <h3>2. Data Set</h3></p>
+                <p><h4>2.1 URL Set</h4></p>JSON parser를 이용해 수집하고자하는 column을 클릭해주세요. 여러 개의 column 수집을 원할 경우 +버튼을 통해
+                JSONPath를 추가하세요
                 <p><h4>2.2 DB Set</h4></p>수집하고자 하는 DB의 IP를 입력해주세요.
-                <p><h3>3. Collect</h3></p>URL, DB 종류별 Tab을 통해 데이터 수집이 가능합니다. Chart의 x축이 될 time 값의 key는 time으로 설정해주세요.
-                <p><h3>4. Draw</h3></p> 데이터의 형태에 따라 Chart를 그릴 수 있습니다. Record Row에서 구별이 필요하다면 Data 탭을 이용하세요.
-                <p><h3>5. Save</h3></p> 자유롭게 Dashboard를 구성한 후, Save를 통해 접근가능한 URL을 제공합니다.
+                <p>
+                <h3>3. Collect</h3></p>URL, DB 종류별 Tab을 통해 데이터 수집이 가능합니다. Chart의 x축이 될 time 값의 key는 time으로 설정해주세요.
+                <p>
+                <h3>4. Draw</h3></p> 데이터의 형태에 따라 Chart를 그릴 수 있습니다. Record Row에서 구별이 필요하다면 Data 탭을 이용하세요.
+                <p>
+                <h3>5. Save</h3></p> 자유롭게 Dashboard를 구성한 후, Save를 통해 접근가능한 URL을 제공합니다.
 
             </div>
             <div class="modal-footer">
@@ -236,7 +253,8 @@
             </div>
             <div class="modal-body" style=" width:100%; height:50%; overflow-x: scroll;">
                 <ul style="width: 300%; height: 100%;">
-                    <li id="liLayout1" style="width: 10%; height:100%; border: solid 30px transparent; display: inline-block; float: left">
+                    <li id="liLayout1"
+                        style="width: 10%; height:100%; border: solid 30px transparent; display: inline-block; float: left">
                         <img src="/images/easyLayout1.png" alt="Smiley face" height="100%" width="100%">
                     </li>
                     <li style="width: 10%; height:100%; border: solid 30px transparent; display: inline-block; float: left">
