--- a/DataVisualization/views/indexHeader.html
+++ b/DataVisualization/views/indexHeader.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="lib/jui-grid/dist/grid-jennifer.min.css"/>
 
     <!--Bootstrap CSS-->
+    <link rel='stylesheet' href='/stylesheets/style.css'/>
     <link rel='stylesheet' href='/stylesheets/sidebar.css'/>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css">
