--- a/DataVisualization/public/layout/easyLayout1.html
+++ b/DataVisualization/public/layout/easyLayout1.html
@@ -1,3 +1,9 @@
+<style>
+    .panel-default {
+        border-color: transparent;
+    }
+</style>
+
 <div class="row" style="height: 100%">
     <div class="col-lg-12" style="height: 30%">
         <div class="panel panel-default" style="height: 100%">
@@ -6,14 +12,14 @@
         </div>
     </div>
     <!-- /.col-lg-6 -->
-    <div class="col-lg-6" style="height: 30%">
+    <div class="col-lg-6" style="height: 30%; padding-right: 0px;">
         <div class="panel panel-default" style="height: 100%">
             <div class="panel-body" style="height: 100%">
             </div>
         </div>
     </div>
     <!-- /.col-lg-6 -->
-    <div class="col-lg-6" style="height: 30%">
+    <div class="col-lg-6" style="height: 30%; padding-left:0px">
         <div class="panel panel-default" style="height: 100%">
             <div class="panel-body" style="height: 100%">
             </div>
