--- a/DataVisualization/views/dashboard.ejs
+++ b/DataVisualization/views/dashboard.ejs
@@ -3,6 +3,7 @@
 <head>
     <title>DashBoard</title>
 
+
     <link rel="stylesheet" href="../lib/jui/dist/ui.min.css"/>
     <link rel="stylesheet" href="../lib/jui/dist/ui-jennifer.min.css"/>
 
@@ -12,8 +13,11 @@
 
 
     <!--Bootstrap CSS-->
+    <link rel='stylesheet' href='/stylesheets/style.css'/>
     <link rel='stylesheet' href='/stylesheets/sidebar.css'/>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.7/css/bootstrap-dialog.min.css">
 </head>
 
 
@@ -50,11 +54,47 @@
 
 </div>
 
+<!--ChartInfo Dialog-->
+<div id="divDialog" title="ChartInfo">
+    <div id="divChartInfo">
+        <table class="table table-striped" id="tblGrid">
+            <thead id="tblHead">
+            <tr>
+                <th colspan="2">chartTitle</th>
+            </tr>
+            <tr>
+                <td>
+                    <h4 id='hChartTitle'>
+                    </h4>
+                </td>
+            </tr>
+        </table>
+
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th>color</th>
+                <th>key</th>
+                <th>alias</th>
+            </tr>
+            </thead>
+            <tbody id="tbodyChartInfo">
+            <tr>
+                <th>color</th>
+                <th>key</th>
+                <th>alias</th>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+
 </body>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js" type="text/javascript"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.7/js/bootstrap-dialog.min.js"></script>
 
 <script src="../lib/jui-core/dist/core.min.js"></script>
 <script src="../lib/jui/dist/ui.min.js"></script>
@@ -71,7 +111,9 @@
 <script src="../javascripts/chartClass/dateChart.js" type="text/javascript"></script>
 <script src="../javascripts/chartClass/dayChart.js" type="text/javascript"></script>
 <script src="../javascripts/chartClass/dataChart.js" type="text/javascript"></script>
-<script src="../javascripts/chartClass/snapEqualChart.js" type="text/javascript"></script>
+<script src="../javascripts/chartClass/snapEqualBarChart.js" type="text/javascript"></script>
+<script src="../javascripts/chartClass/snapEqualColumnChart.js" type="text/javascript"></script>
+<script src="../javascripts/chartClass/pieChart.js" type="text/javascript"></script>
 <script src="../javascripts/chartHelper.js" type="text/javascript"></script>
 <script src="../javascripts/apiHelper.js" type="text/javascript"></script>
 
