[commit] collect modify

--- a/DataVisualization/views/index.ejs
+++ b/DataVisualization/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/html">
 <head>
-    <title>Test</title>
+    <title>DataVisualization</title>
 
     <% include indexHeader.html %>
 </head>
@@ -108,7 +108,7 @@
                             <tbody>
                             <td>
                                 <input id="inputChartInterval" type="text" placeholder='Number' class="form-control"
-                                       onClick="this.setSelectionRange(0, this.value.length)"/>
+                                       onClick="this.setSelectionRange(0, this.value.length)" value="2000"/>
                             </td>
                             <td>
                                 <select id="selectChartType" class="form-control">
